--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,13 @@
 html,
 body {
+  width: 100vw;
+  height: 100vh;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  overflow-x: hidden;
 }
 
 * {
